Source/WebKit/WebProcess/WebStorage/StorageNamespaceImpl.cpp
@@ -42,8 +42,18 @@
 namespace WebKit {
 using namespace WebCore;
 
+static HashMap<StorageNamespaceImpl::Identifier, StorageNamespaceImpl*>& sessionStorageNamespaces()
+{
+    static NeverDestroyed<HashMap<StorageNamespaceImpl::Identifier, StorageNamespaceImpl*>> map;
+    return map;
+}
+
 Ref<StorageNamespaceImpl> StorageNamespaceImpl::createSessionStorageNamespace(Identifier identifier, PageIdentifier pageID, unsigned quotaInBytes, PAL::SessionID sessionID)
 {
+    // The identifier of a session storage namespace is the WebPageProxyIdentifier. It is possible we have several WebPage objects in a single process for the same
+    // WebPageProxyIdentifier and these need to share the same namespace instance so we know where to route the IPC to.
+    if (auto* existingNamespace = sessionStorageNamespaces().get(identifier))
+        return *existingNamespace;
     return adoptRef(*new StorageNamespaceImpl(StorageType::Session, identifier, pageID, nullptr, quotaInBytes, sessionID));
 }
 
@@ -66,10 +76,19 @@ StorageNamespaceImpl::StorageNamespaceImpl(WebCore::StorageType storageType, Ide
     , m_sessionID(sessionID)
 {
     ASSERT(storageType == StorageType::Session || !m_sessionPageID);
+    
+    if (m_storageType == StorageType::Session) {
+        ASSERT(!sessionStorageNamespaces().contains(m_storageNamespaceID));
+        sessionStorageNamespaces().add(m_storageNamespaceID, this);
+    }
 }
 
 StorageNamespaceImpl::~StorageNamespaceImpl()
 {
+    if (m_storageType == StorageType::Session) {
+        bool wasRemoved = sessionStorageNamespaces().remove(m_storageNamespaceID);
+        ASSERT_UNUSED(wasRemoved, wasRemoved);
+    }
 }
 
 void StorageNamespaceImpl::didDestroyStorageAreaMap(StorageAreaMap& map)
